Refactor GeoCoder and ImportService for improved error handling and code organization; add loadFromFile method to ImportService